--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Voice text Meli</title>
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
-	<script src="https://code.responsivevoice.org/responsivevoice.js"></script>
+	<script src="https://code.responsivevoice.org/responsivevoice.js?key=1XKzcLQG"></script>
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 
 
